# mcts-hanabi

./: CMakeLists.txt  README.md  mb_rl_env_example.py  mix_rulebased2.sh  mixflawed.sh  mixflawed_depth1  mixflawed_regret.sh  mixinner.sh  mixmute.sh  mixmute_regret.sh  mixrandom_regret.sh  pyhanabi.cc  pyhanabi.h  pyhanabi.py  pyproject.toml  read_experiment.py  record_moves.py  requirements.txt  rl_env.py  run_experiment.py  visualise_tree.py  vrun _inner.sh  vrun_flawed.sh  vrun_iggi.sh  vrun_mcts_detnone_c.sh  vrun_mcts_detnone_random_rulesnone.sh  vrun_mcts_detnone_regret_depth1.sh  vrun_mcts_litmatch.sh  vrun_mcts_mybestc.sh  vrun_mcts_mybestnoc.sh  vrun_mcts_nodet.sh  vrun_mcts_nores.sh  vrun_mcts_norules.sh  vrun_outer.sh  vrun_piers.sh  vrun_random.sh  vrun_rulebased3p.sh  vrun_vdb.sh
agents/: human_agent.py  rule_based_agent.py  simple_agent.py
experiment/: mix_rulebased.sh  mixinner_regret.sh  mixmute.sh  mixrandom.sh  mixvdb_regret.sh  vrun_mcts_c_regret.sh  vrun_mcts_default.sh  vrun_mcts_detnone_c.sh  vrun_mcts_detnone_c.sh.o1216265  vrun_mcts_detnone_regret.sh  vrun_mcts_regret.sh
experiments/: analyse_experiment.ipynb  read_experiment.py  run_experiment.py  vrun_flawed.sh  vrun_iggi.sh  vrun_mcts.sh  vrun_outer.sh  vrun_piers.sh  vrun_random.sh  vrun_vdb.sh
experiments_store/: analyse_experiment.ipynb  read_experiment.py
hanabi_lib/: canonical_encoders.cc  hanabi_game.cc  hanabi_hand.cc  hanabi_hand.h  hanabi_move.cc  hanabi_move.h  hanabi_observation.cc  hanabi_state.cc  hanabi_state.h
paper/: Search Agents and Regret in Hanabi.pptx
(+102 files in other folders)
