[project]
name = "mcts-hanabi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Brooks", email = "mjbrooks95@gmail.com"},
]
dependencies = [
    "numpy>=2.0.0",
    "cffi>=1.16.0",
    "matplotlib>=3.9.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
